[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/other/bg.jpeg" type="Texture" id=1]
[ext_resource path="res://assets/game over/over.png" type="Texture" id=2]
[ext_resource path="res://assets/game over/o.png" type="Texture" id=3]
[ext_resource path="res://assets/game over/game.png" type="Texture" id=4]
[ext_resource path="res://assets/game over/title.png" type="Texture" id=5]
[ext_resource path="res://assets/game over/restart.png" type="Texture" id=6]
[ext_resource path="res://gameOver.gd" type="Script" id=7]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -34, -61, 0, 0, 0, 0, 509, -61 )
}

[node name="gameOver" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -489, -171 )
script = ExtResource( 7 )

[node name="bg" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true

[node name="spawnLine" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="spawnPoint" type="PathFollow2D" parent="spawnLine"]

[node name="spawns" type="Node2D" parent="."]

[node name="game" type="TextureRect" parent="."]
margin_left = 84.0
margin_top = 71.0
margin_right = 382.0
margin_bottom = 224.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="over" type="TextureRect" parent="."]
margin_left = 183.0
margin_top = 174.0
margin_right = 392.0
margin_bottom = 327.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="o" type="TextureRect" parent="."]
margin_left = 59.0
margin_top = 160.0
margin_right = 205.0
margin_bottom = 325.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="buttons" type="HBoxContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = 90.0
margin_bottom = 133.0

[node name="title" type="TextureButton" parent="buttons"]
margin_right = 238.0
margin_bottom = 43.0
size_flags_horizontal = 3
texture_normal = ExtResource( 5 )
expand = true
stretch_mode = 5

[node name="restart" type="TextureButton" parent="buttons"]
margin_left = 242.0
margin_right = 480.0
margin_bottom = 43.0
size_flags_horizontal = 3
texture_normal = ExtResource( 6 )
expand = true
stretch_mode = 5

[connection signal="pressed" from="buttons/title" to="." method="_on_title_pressed"]
[connection signal="pressed" from="buttons/restart" to="." method="_on_restart_pressed"]
